<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:id="@+id/restaurant_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Restaurant name" />

    <TextView
        android:padding="10sp"
        android:id="@+id/restaurant_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type"
        android:textSize="20sp" />

    <Spinner
        android:padding="10sp"
        android:id="@+id/restaurant_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Pick date and time"
        tools:ignore="TextFields" />

    <DatePicker
        android:id="@+id/DatePickerDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"/>

    <EditText
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number|none"
        android:maxLength="4"
        android:digits="0123456789"
        android:hint="Average meal price" />

    <TextView
        android:padding="10sp"
        android:id="@+id/service_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:text="@string/service_rating"/>

    <RatingBar
        android:layout_marginLeft="10sp"
        android:id="@+id/rating_bar_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"/>

    <TextView
        android:layout_marginTop="10sp"
        android:padding="10sp"
        android:id="@+id/cleanliness_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:text="@string/cleanliness_rating"/>

    <RatingBar
        android:layout_marginLeft="10sp"
        android:id="@+id/rating_bar_cleanliness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"/>

    <TextView
        android:padding="10sp"
        android:id="@+id/food_quality_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:text="@string/food_quality_rating"/>

    <RatingBar
        android:layout_marginLeft="10sp"
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"/>

    <EditText
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:id="@+id/tv_notes_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Notes (Optional)" />

    <EditText
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:id="@+id/edit_reporter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Reporter name" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/submit_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>